backend/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: 162623214680.dkr.ecr.ap-northeast-2.amazonaws.com/server-backend-express:latest
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: ap-northeast-2-ecr-registry
